// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration global plugin should add the plugin 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/plugins",
  },
  Object {
    "content": Object {
      "config": Object {
        "credentials": false,
        "max_age": 7000,
        "preflight_continue": false,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "cors",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/plugins",
  },
]
`;

exports[`Integration global plugin should add the plugin 2`] = `
Object {
  "apis": Array [],
  "consumers": Array [],
  "plugins": Array [
    Object {
      "_info": Object {
        "created_at": "___created_at___",
        "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      },
      "attributes": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "enabled": true,
      },
      "name": "cors",
    },
  ],
}
`;

exports[`Integration global plugin should not update if already up to date 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/plugins",
  },
  Object {
    "content": Object {
      "config": Object {
        "credentials": false,
        "max_age": 7000,
        "preflight_continue": false,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "cors",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/plugins",
  },
  Object {
    "params": Object {
      "noop": true,
      "plugin": Object {
        "attributes": Object {
          "config": Object {
            "credentials": false,
            "max_age": 7000,
            "preflight_continue": false,
          },
        },
        "name": "cors",
      },
      "type": "noop-global-plugin",
    },
    "type": "noop",
  },
]
`;

exports[`Integration global plugin should not update if already up to date 2`] = `
Object {
  "apis": Array [],
  "consumers": Array [],
  "plugins": Array [
    Object {
      "_info": Object {
        "created_at": "___created_at___",
        "id": "2b47ba9b-761a-492d-9a0c-000000000002",
      },
      "attributes": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "enabled": true,
      },
      "name": "cors",
    },
  ],
}
`;

exports[`Integration global plugin should remove the api 1`] = `
Array [
  Object {
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/plugins",
  },
  Object {
    "content": Object {
      "config": Object {
        "credentials": false,
        "max_age": 7000,
        "preflight_continue": false,
      },
      "created_at": "___created_at___",
      "enabled": true,
      "id": "2b47ba9b-761a-492d-9a0c-000000000001",
      "name": "cors",
    },
    "ok": true,
    "params": Object {
      "body": Object {
        "config": Object {
          "credentials": false,
          "max_age": 7000,
          "preflight_continue": false,
        },
        "name": "cors",
      },
      "endpoint": Object {
        "name": "plugins",
        "params": Object {
          "pluginName": "cors",
        },
      },
      "method": "POST",
      "type": "add-global-plugin",
    },
    "status": 201,
    "statusText": "Created",
    "type": "response",
    "uri": "http://localhost:8001/plugins",
  },
  Object {
    "params": Object {
      "endpoint": Object {
        "name": "plugin",
        "params": Object {
          "pluginId": "2b47ba9b-761a-492d-9a0c-000000000002",
        },
      },
      "method": "DELETE",
      "type": "remove-global-plugin",
    },
    "type": "request",
    "uri": "http://localhost:8001/plugins/2b47ba9b-761a-492d-9a0c-000000000002",
  },
  Object {
    "content": "",
    "ok": true,
    "params": Object {
      "endpoint": Object {
        "name": "plugin",
        "params": Object {
          "pluginId": "2b47ba9b-761a-492d-9a0c-000000000002",
        },
      },
      "method": "DELETE",
      "type": "remove-global-plugin",
    },
    "status": 204,
    "statusText": "No Content",
    "type": "response",
    "uri": "http://localhost:8001/plugins/2b47ba9b-761a-492d-9a0c-000000000002",
  },
]
`;

exports[`Integration global plugin should remove the api 2`] = `
Object {
  "apis": Array [],
  "consumers": Array [],
  "plugins": Array [],
}
`;
